--- a/exemple1.html
+++ b/exemple1.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-<script>
-    var x = 5;
-    var y = 7;
-    var z = y + x;
-    console.log(z);
-</script>    
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
     
