--- a/exemple2.html
+++ b/exemple2.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>
+        javascript
+    </h1>
+    <script>
+       console.error('this is an error')
+    </script>
 </body>
 </html>
