--- a/exemple1.html
+++ b/exemple1.html
@@ -13,7 +13,7 @@
         </h1>
     </header>
     <script>
-        alert('hello world');
+        alert('this page may have some disturben photos');
     </script>
 </body>
 </html>
