--- a/exemple2.html
+++ b/exemple2.html
@@ -12,6 +12,7 @@
     </h1>
     <script>
        console.error('this is an error')
+       console.warn('this is a warning')
     </script>
 </body>
 </html>
